fix: 更新密碼提示與預設密碼雜湊值

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </form>
 
             <div class="hint">
-                <p>💡 提示：想想我們的特殊日子</p>
+                <p>💡 請輸入得到的數字密碼</p>
             </div>
         </div>
     </div>
