feat: 更新驚喜揭曉頁面內容與新增媒體輪播功能

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="password-card">
-            <h1 class="title">輸入密碼解鎖秘密 🔐</h1>
+            <h1 class="title">請輸入得到的密碼 🔐</h1>
 
             <form id="passwordForm" class="password-form">
                 <div class="input-group">
