--- a/scratch-card.html
+++ b/scratch-card.html
@@ -20,13 +20,13 @@
                 <div class="scratch-container">
                     <canvas id="scratchCanvas" class="scratch-canvas"></canvas>
                     <div class="scratch-reveal" id="scratchReveal">
-                        <!-- 初始狀態：100張小圖片 -->
+                        <!-- 初始狀態：100個問號標記 -->
                         <div class="image-grid" id="imageGrid">
-                            <!-- 動態產生100張小圖片 -->
+                            <!-- 動態產生100個問號標記 -->
                         </div>
                         <!-- 最終狀態：單張大圖片 -->
-                        <img src="public/images/ultrasound2.jpg" alt="驚喜照片" class="scratch-image final-image"
-                            id="finalImage" style="display: none;" onerror="handleImageError(this)">
+                        <img src="public/images/week12.jpg" alt="驚喜照片" class="scratch-image final-image" id="finalImage"
+                            style="display: none;" onerror="handleImageError(this)">
                     </div>
                 </div>
 
