--- a/claw-machine.html
+++ b/claw-machine.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>夾娃娃機 - 性別揭露</title>
     <link rel="stylesheet" href="src/claw-machine.css">
 </head>
