修正夾娃娃機標題內容，將文字改為「🎮 性別娃娃機 🎮」

--- a/claw-machine.html
+++ b/claw-machine.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>夾娃娃機 - 性別揭露</title>
+    <title>性別娃娃機</title>
     <link rel="stylesheet" href="src/claw-machine.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>🎮 夾娃娃機性別揭露 🎮</h1>
 
         <div class="game-container">
             <!-- 夾娃娃機主體 -->
