新增 Open Graph 和 Twitter Meta 標籤以改善社交媒體預覽

--- a/scratch-card.html
+++ b/scratch-card.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Open Graph Meta Tags for Social Media Preview -->
+    <meta property="og:title" content="刮刮樂卡 🎁">
+    <meta property="og:description" content="刮開卡片來發現驚喜！">
+    <meta property="og:image" content="https://blogs.sqz777.com/img/sqz777-logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sqz777.github.io/joyful-reveal-app/scratch-card.html">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="刮刮樂卡 🎁">
+    <meta name="twitter:description" content="刮開卡片來發現驚喜！">
+    <meta name="twitter:image" content="https://blogs.sqz777.com/img/sqz777-logo.png">
     <title>刮刮樂驚喜 🎉</title>
     <link rel="stylesheet" href="src/styles.css">
     <link rel="icon"
